name:    mecha
version: 0.0.6

category: Language

synopsis: A constructive solid modeling language.

description: Mecha is a constructive solid modeling language.

author:     Tom Hawkins <tomahawkins@gmail.com>
maintainer: Tom Hawkins <tomahawkins@gmail.com>

license:      BSD3
license-file: LICENSE

homepage: http://tomahawkins.org

build-type:    Simple
cabal-version: >= 1.6

library

    build-depends:
        base       >= 4       && < 5,
        process    >= 1.0.1.1 && < 1.1,
        digest     >= 0.0.0.8 && < 0.0.1,
        bytestring >= 0.9.1.4 && < 0.9.2,
        directory  >= 1.0.1.1 && < 1.2,
        OpenGL     >= 2.4.0.0 && < 2.5,
        GLUT       >= 2.2.2.0 && < 2.3

    exposed-modules:
        Language.Mecha
        Language.Mecha.Assembly
        Language.Mecha.Solid
        Language.Mecha.Types
        Language.Mecha.Visual

    extensions:

    -- includes:        opencsg.h
    -- extra-libraries: opencsg

    ghc-options: -W

-- executable     mecha-csg
--   main-is:     CSG.hs
--   hs-source-dirs: examples,.
-- 
-- executable        mecha-bent-axis
--   main-is:        BentAxis.hs
--   hs-source-dirs: examples,.
--   other-modules:  Axle,
--                   BarrelGroup,
--                   Piston,
--                   TimingPlate

source-repository head
    type:     git
    location: git://github.com/tomahawkins/mecha.git
